# maliit-nemo-keyboard

./: .gitignore  CMakeLists.txt  transifex.yml
data/: maliit-server.service  org.maliit.server.service
layouts/: en.json  fi.json  ru.json
maliit-keyboard/qml/: Keyboard.qml
nemo-keyboard/: nemo-keyboard.qml
nemo-keyboard/org/nemomobile/: BackspaceKey.qml  CharacterKey.qml  EnglishLandscape.qml  EnglishPortrait.qml  EnterKey.qml  FunctionKey.qml  InputHandler.qml  KeyBase.qml  KeyboardBase.qml  KeyboardLandscape.qml  KeyboardPortrait.qml  LandscapeCharacterKey.qml  Popper.qml  PreeditTestHandler.qml  ShiftKey.qml  SymbolKey.qml  layouts.js
predictor/: CMakeLists.txt  plugin.cpp  presagepredictor.cpp  presageworker.cpp  qmldir
qml/: nemo-keyboard.qml
qml/org/nemomobile/: BackspaceKey.qml  CharacterKey.qml  DigitKey.qml  EnterKey.qml  FunctionKey.qml  InputHandler.qml  KeyBase.qml  KeyboardBase.qml  KeyboardDigits.qml  KeyboardLandscape.qml  KeyboardPortrait.qml  LandscapeCharacterKey.qml  PluginSwitch.qml  Popper.qml  PortraitCharacterKey.qml  ShiftKey.qml  SpellChecker.qml  SymbolKey.qml  qmldir  touchpointarray.js
settings-plugin/: CMakeLists.txt  keyboard.qml  keyboardsettingsplugin.h
settings-plugin/translations/: keyboard_cs.ts  keyboard_de.ts  keyboard_en_US.ts  keyboard_es.ts  keyboard_fi.ts  keyboard_nl.ts  keyboard_pl.ts  keyboard_ru.ts  keyboard_sk_SK.ts  keyboard_uk.ts
src/: CMakeLists.txt  keyboardslayoutmodel.cpp  keyboardslayoutmodel.h  plugin.cpp  plugin.h  predictormodel.cpp  predictormodel.h  qmldir
src/predict/: candidatescallback.cpp  candidatescallback.h  spellchecker.cpp  spellchecker.h  spellpredictworker.cpp  spellpredictworker.h
src/qml/: BackspaceKey.qml  CharacterKey.qml  DigitKey.qml  EnterKeyItem.qml  FunctionKey.qml  InputHandler.qml  KeyboardBase.qml  KeyboardDigits.qml  KeyboardLandscape.qml  KeyboardPortrait.qml  PluginSwitch.qml  Popper.qml  ShiftKey.qml  SpellChecker.qml  qmldir
tests/: CMakeLists.txt
tests/uitools/: CMakeLists.txt  fakeinputmethod.cpp  fakeinputmethod.h  fakekeyoverridequick.cpp  fakekeyoverridequick.h  main.cpp  maliitquick.h
tests/ut_keyLayoutsModel/: CMakeLists.txt  ut_layoutsModel.cpp  ut_layoutsModel.h
